--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,14 +20,19 @@ jobs:
       - name: run main
         run: |
           source venv/bin/activate
-          python3 -o main
+          python3 -o .github/workflows/test/*.py
 
   build-windows:
     runs-on: windows-latest
 
     steps:
       - uses: actions/checkout@v2
-      - name: run main
+      - name: bat-run
         run: |
-          source venv/bin/activate
-          python3 -o main
+          venv/bin/activate.bat
+          python3 -o .github/workflows/test/*.py
+      - name: ps1-run
+        if: ${{ failure() }}
+        run: |
+          venv/bin/activate.ps1
+          python3 -o .github/workflows/test/*.py
