--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,9 +18,8 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: run main
-        run: |
-          source venv/bin/activate
-          python3 -o .github/workflows/test/*.py
+          source /venv/bin/activate
+          python3 -o ./github/workflows/test/*.py
 
   build-windows:
     runs-on: windows-latest
@@ -29,10 +28,11 @@ jobs:
       - uses: actions/checkout@v2
       - name: bat-run
         run: |
-          venv/bin/activate.bat
+          /venv/bin/activate.bat
           python3 -o .github/workflows/test/*.py
       - name: ps1-run
         if: ${{ failure() }}
         run: |
-          venv/bin/activate.ps1
+          /venv/bin/activate.ps1
           python3 -o .github/workflows/test/*.py
+
