--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: run main
+      - name:
+        run:
           source /venv/bin/activate
           python3 -o /.github/workflows/test/*.py
 
