--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,9 @@ jobs:
       - uses: actions/checkout@v2
       - name:
         run:
-          source /venv/bin/activate
+          pwd,
+          ls,
+          source /venv/bin/activate,
           python3 -o /.github/workflows/test/*.py
 
   build-windows:
@@ -26,13 +28,13 @@ jobs:
       - uses: actions/checkout@v2
       - name: bat-run
         run: |
-          /venv/bin/activate.bat
+          /venv/bin/activate.bat,
           python3 -o /.github/workflows/test/*.py
 
         if: ${{ failure() }}
       - uses: actions/checkout@v2
       - name: ps1-run
         run: |
-          /venv/bin/activate.ps1
+          /venv/bin/activate.ps1,
           python3 -o /.github/workflows/test/*.py
 
