--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,6 +17,7 @@ jobs:
       - uses: actions/checkout@v2
       - name:
         run:
+          pwd
           source /venv/bin/activate
           python3 -o /.github/workflows/test/*.py
 
