--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
       - name: bash-run
         run: |
           source venv/bin/activate
-          python3 -O .github/workflows/test/*.py
+          python3 -O .github/workflows/test/test.py
 
   build-windows:
     runs-on: windows-latest
@@ -27,12 +27,12 @@ jobs:
       - name: bat-run
         run: |
           venv/bin/activate.bat
-          python3 -O .github/workflows/test/*.py
+          python3 -O .github/workflows/test/test.py
 
         if: ${{ failure() }}
       - uses: actions/checkout@v2
       - name: ps1-run
         run: |
           venv/bin/activate.ps1
-          python3 -O .github/workflows/test/*.py
+          python3 -O .github/workflows/test/test.py
 
