--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,7 @@ jobs:
       - uses: actions/checkout@v2
       - name: bash-run
         run: |
-          source venv/bin/activate
+          pip3 install matplotlib
           python3 -O .github/workflows/test/test.py
 
   build-windows:
@@ -26,13 +26,13 @@ jobs:
       - uses: actions/checkout@v2
       - name: bat-run
         run: |
-          venv/bin/activate.bat
+          pip3 install matplotlib
           python3 -O .github/workflows/test/test.py
 
         if: ${{ failure() }}
       - uses: actions/checkout@v2
       - name: ps1-run
         run: |
-          venv/bin/activate.ps1
+          pip3 install matplotlib
           python3 -O .github/workflows/test/test.py
 
