--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: bash-run
-      -allow-failure: true
+      - continue-on-error: true
         run: |
           pip3 install tkinter
           pip3 install matplotlib
